# drf-reactjs

./: .gitignore  README.md  docker-compose.yml  pytest.ini
backend/: .gitignore  Dockerfile  conftest.py  db.py  pyproject.toml  pytest.ini  start.sh
backend/backend/: pagination.py  settings.py  urls.py
backend/data/: example-data.csv
backend/standards/: apps.py  filters.py  models.py  serializers.py  views.py
backend/standards/management/commands/: import_data.py
backend/standards/migrations/: 0001_initial.py
backend/standards/tests/: test_serializers.py  test_views.py
frontend/: Dockerfile  package.json
frontend/src/: App.js  addView.js  api.js  formComponent.js  listView.js  selectComponent.js
